--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "biome format --write ."
   },
   "dependencies": {
+    "@tanstack/react-router": "^1.125.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@biomejs/biome": "2.1.1",
     "@eslint/js": "^9.30.1",
+    "@tanstack/router-plugin": "^1.125.6",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
