--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "biome format --write ."
   },
   "dependencies": {
+    "@fontsource/press-start-2p": "^5.2.6",
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-router": "^1.125.6",
     "react": "^19.1.0",
