--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-router": "^1.125.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "remixicon": "^4.6.0",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
